--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <title>TTPSC</title>
-  </head>
-  <body>
-    <h1>TTPSC</h1>
-  </body>
+    <head>
+        <title>TTPSC</title>
+    </head>
+    <body>
+        <h1>欢迎访问TTPSC</h1>
+    </body>
 </html>
