--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>TTPSC</title>
     </head>
     <body>
-        <h1>欢迎访问TTPSC</h1>
-    </body>
+        <h1>欢迎访问西奥小镇插件系统中文站！</h1>
+        <h2>主页</h2>
+        <a href="description.html" target="_blank">
+        <button>网站简介</button>
+        </a>
+   </body>
 </html>
