--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>欢迎访问西奥小镇插件系统中文站！</h1>
         <h2>主页</h2>
-        <a href="website/description.html" target="_blank">
+        <a href="website/description.html" target="_self">
         <button>网站简介</button>
         </a>
    </body>
