--- a/website/description.html
+++ b/website/description.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <title>TTPSC - 介绍</title>
-  </head>
-  <body>
-    <a href="index.html" tatget="_self">返回</a>
-    <h1>西奥小镇插件系统中文站</h1>
-    <h2>介绍</h2>
-  </body>
+    <head>
+        <title>TTPSC - 介绍</title>
+    </head>
+    <body>
+        <a href="index.html" target="_self">返回</a>
+        <h1>西奥小镇插件系统中文站</h1>
+        <h2>介绍</h2>
+    </body>
 </html>
