--- a/website/description.html
+++ b/website/description.html
@@ -4,7 +4,7 @@
         <title>TTPSC - 介绍</title>
     </head>
     <body>
-        <a href="TTPSC/index.html" target="_self">返回</a>
+        <a href="TTPSC" target="_self">返回</a>
         <h1>西奥小镇插件系统中文站</h1>
         <h2>介绍</h2>
     </body>
