--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
         <meta chardet="UTF-8">
         <title>TTPSC</title>
     </head>
-    <body onload="showTime()">
-        <div id="myClock">现在时间</div>
+    <body>
         <h1>欢迎访问西奥小镇插件系统中文站！</h1>
         <h2>主页</h2>
-        <a href="website/description.html" target="_self">
-        <button>网站简介</button>
-        </a>
+        <a href="website/description.html" target="_self">网站介绍</a>
    </body>
 </html>
