--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <h1>欢迎访问西奥小镇插件系统中文站！</h1>
         <h2>主页</h2>
-        <a href="website/description.html" target="_self">网站介绍</a>
+        <p><a href="website/description.html" target="_self">网站介绍</a>
+            <a href="https://forum.theotown.com" target="_blank">西奥小镇论坛</a>
+            <a href="https://pca.svetikas.lt/docs/" target="_blank">官方插件系统</a>
+        </p>
    </body>
 </html>
