--- a/website/description.html
+++ b/website/description.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
     <head>
+        <meta charset="UTF-8">
         <title>TTPSC - 介绍</title>
     </head>
     <body>
-        <a href="https://sioneo.github.io/TTPSC" target="_self">返回</a>
+        <a href="https://sioneo.github.io/ttpsc" target="_self">返回</a>
         <h1>西奥小镇插件系统中文站</h1>
         <h2>介绍</h2>
     </body>
