--- a/website/description.html
+++ b/website/description.html
@@ -5,8 +5,9 @@
         <title>TTPSC - 介绍</title>
     </head>
     <body>
-        <a href="https://sioneo.github.io/TTPSC" target="_self">返回</a>
-        <h1>西奥小镇插件系统中文站</h1>
-        <h2>介绍</h2>
+        <p>
+            <a href="https://sioneo.github.io/ttpsc" target="_self">返回</a>
+            <h1>西奥小镇插件系统中文站</h1></p>
+        <h2>本站介绍</h2>
     </body>
 </html>
