--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="zh">
-    <head>
-        <meta chardet="UTF-8">
-        <title>TTPSC</title>
-    </head>
-    <body>
-        <h1>欢迎访问西奥小镇插件系统中文站！</h1>
-        <h2>主页</h2>
-        <p><a href="website/description.html" target="_self">网站介绍</a>
-            <a href="https://forum.theotown.com" target="_blank">西奥小镇论坛</a>
-            <a href="https://pca.svetikas.lt/docs/" target="_blank">官方插件系统</a>
-        </p>
-   </body>
+<head>
+  <meta charset="UTF-8">
+  <title>西奥小镇插件系统中文站</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1 class="webTitle">西奥小镇插件系统中文站</h1>
+
+  <h3 class="pageNow">
+     <!-- <a href="back.net" target="_self" class="backButton">返回</a> -->
+  主页</h3>
+
+  <p class="webIndex">
+    <a href="website/compass.html" target="_self">索引页</a>
+    <a href="https://forum.theotown.com" target="_self">西奥小镇论坛</a>
+    <a href="https://pca.svetikas.lt/docs/" target="_self">官方插件系统</a>
+    <a href="https://pca.svetikas.lt/" target="_self">插件制作网站</a>
+    <a href="https://www.gamekee.com/theotown/" target="_self">GAMEKEE</a>
+    <a href="https://pd.qq.com/s/fu3snsucp" target="_self">QQ频道</a>
+    <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
+    <a href="https://www.bilibili.com" target="_self">向我们投稿!</a>
+  </p>
+
+  <h2 class="pageTitle">欢迎访问西奥小镇插件系统中文站!</h2>
+  <p class="pageText">你好！欢迎访问本站！本站致力于为国内插件创作者们打造一个舒适的资源平台，希望你能喜欢。</p>
+
+  <p class="noteTitle">最低版本要求：1.11.56</p>
+  <p class="note">此内容需要最低1.11.56的版本才能使用。</p>
+
+  <p class="attentionTitle">注意！</p>
+  <p class="attention">使用插件，您可以在不修改apk的情况下将自己的建筑添加到游戏中（不要修改后者，我们真的不喜欢它）。您甚至可以与他人共享它们，例如使用此官方论坛或插件商店。</p>
+
+  <p class="warningTitle">警告！</p>
+  <p class="warning">Warning!</p>
+
+  <p style="text-align: center; background-color: #505050; font-size: 13px;">
+    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+  </p>
+
+</body>
 </html>
