--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
