--- a/website/submit.html
+++ b/website/submit.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>投稿 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="style/style.css">
+  <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-    <a href="website/compass.html" target="_self" class="backButton">返回索引页</a>
+    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>
     <a href="https://sioneo.github.io/ttpsc/" target="_self" class="backButton">返回主页</a>
   投稿</h3>
 
