--- a/website/compass.html
+++ b/website/compass.html
@@ -13,7 +13,7 @@
   索引页</h3>
 
   <p class="webIndex">
-    <a href="cwebsite/ompass.html" target="_self">索引页</a>
+    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_self">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_self">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_self">插件制作网站</a>
