--- a/website/submit.html
+++ b/website/submit.html
@@ -14,7 +14,7 @@
   投稿</h3>
 
   <p class="webIndex">
-    <a href="compass.html" target="_self">索引页</a>
+    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_self">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_self">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_self">插件制作网站</a>
