--- a/website/compass.html
+++ b/website/compass.html
@@ -20,7 +20,7 @@
     <a href="https://www.gamekee.com/theotown/" target="_self">GAMEKEE</a>
     <a href="https://pd.qq.com/s/fu3snsucp" target="_self">QQ频道</a>
     <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
-    <a href="website/submit.html" target="_self">向我们投稿!</a>
+    <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
   </p>
 
   <h2 class="pageTitle">索引页</h2>
