--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="https://pd.qq.com/s/fu3snsucp" target="_self">QQ频道</a>
     <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
     <a href="website/submit.html" target="_self">向我们投稿!</a>
+    <a href="website/test.html" target="_self">测试页</a>
   </p>
 
   <h2 class="pageTitle">欢迎访问西奥小镇插件系统中文站!</h2>
