--- a/website/test.html
+++ b/website/test.html
@@ -24,7 +24,7 @@
   </p>
 
   <h2 class="pageTitle">测试页</h2>
-  <p class="pageText">次页用于测试一些东西。</p>
+  <p class="pageText">本页用于测试一些东西。</p>
 
   <p class="noteTitle">最低版本要求：1.11.56</p>
   <p class="note">此内容需要最低1.11.56的版本才能使用。</p>
