--- a/website/test.html
+++ b/website/test.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>索引页 - 西奥小镇插件系统中文站</title>
+  <title>测试页 - 西奥小镇插件系统中文站</title>
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
@@ -35,6 +35,8 @@
   <p class="warningTitle">警告！</p>
   <p class="warning">Warning!</p>
 
+  <p class="notificationTitle">通知</p>
+  <p class="notification">这里会有一些通知</p>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
