--- a/website/test.html
+++ b/website/test.html
@@ -38,6 +38,11 @@
   <p class="notificationTitle">通知</p>
   <p class="notification">这里会有一些通知</p>
 
+  <p class="codeTitle">code.json</p>
+  <p class="code">hello world!<br>test</p>
+
+  <p class="pageText">这后面跟着一些等宽字体的文字 <text class="mono">test</text> , <text class="mono">hello world!</text></p>
+
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
