--- a/website/submit.html
+++ b/website/submit.html
@@ -15,11 +15,11 @@
 
   <p class="webIndex">
     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
-    <a href="https://forum.theotown.com" target="_self">西奥小镇论坛</a>
-    <a href="https://pca.svetikas.lt/docs/" target="_self">官方插件系统</a>
-    <a href="https://pca.svetikas.lt/" target="_self">插件制作网站</a>
-    <a href="https://www.gamekee.com/theotown/" target="_self">GAMEKEE</a>
-    <a href="https://pd.qq.com/s/fu3snsucp" target="_self">QQ频道</a>
+    <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
+    <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">西奥>官方插件系统</a>
+    <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">西奥>插件制作网站</a>
+    <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">西奥>GAMEKEE</a>
+    <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">西奥>QQ频道</a>
     <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
     <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
   </p>
@@ -42,10 +42,11 @@
 
 
   <h3 class="pageSubTitle">投稿格式</h3>
-  <p class="pageText">遵循此格式可以让我更好地了解你的想法。</p>
+  <p class="pageText">（待完善）</p>
 
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
+    本页于2024/11/30 13:11进行最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 </body>
