--- a/website/compass.html
+++ b/website/compass.html
@@ -15,10 +15,10 @@
   <p class="webIndex">
     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
-    <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">西奥>官方插件系统</a>
-    <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">西奥>插件制作网站</a>
-    <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">西奥>GAMEKEE</a>
-    <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">西奥>QQ频道</a>
+    <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
+    <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
+    <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">GAMEKEE</a>
+    <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">QQ频道</a>
     <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
     <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
   </p>
