--- a/website/compass.html
+++ b/website/compass.html
@@ -26,8 +26,8 @@
   <h2 class="pageTitle">索引页</h2>
   <p class="pageText">你可以在此进入本站的各模块。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="introduction.html" target="_self">简介</a></h3>
-  <h3 class="pageIndexLink"><a href="PluginManifest.html" target="_self">插件清单文件(plugin.manifest)</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/introduction.html" target="_self">简介</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/PluginManifest.html" target="_self">插件清单文件(plugin.manifest)</a></h3>
   <h3 class="pageIndexLink"><a href="tutorial/compass.html" target="_self">教程</a></h3>
   <h3 class="pageIndexLink"><a href="resource/compass.html" target="_self">资源</a></h3>
   <h3 class="pageIndexLink"><a href="other/compass.html" target="_self">其它</a></h3>
