--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -21,7 +21,20 @@
   </p>
 
   <h2 class="pageTitle">插件清单文件(plugin.manifest)</h2>
-  <p class="pageText">（待完善）</p>
+  <p class="pageText">
+    在1.8.15版本中，西奥小镇加入了插件清单文件（即plugin.manifest），这让外部插件也能在在线模式中使用。<br>
+    此文件必须在插件文件夹的根目录（即第一个文件夹）中才能有效，且文件名必须为 <text class="mono">plugin.manifest</text>。<br>
+    如果你想创建新加入的 <text class="mono">.ttplugin</text> 文件的话，插件清单文件也是必须有的。
+  </p>
+
+  <h3 class="pageSubTitle">例子</h3>
+  <p class="pageText">以下是一个最简单、最基础的插件清单文件的例子：<br></p>
+  <p class="codeTitle">plugin.manifest</p>
+  <p class="code">
+    {<br>&emsp;&emsp;"id": "$example",<br>&emsp;&emsp;"version": 1,<br>&emsp;&emsp;
+    "title": "标题",<br>&emsp;&emsp;"text": "介绍",<br>&emsp;&emsp;"author": "Sioneo",
+    <br>&emsp;&emsp;"thumbnail": "preview.png"<br>}
+  </p>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     本页于2024/11/30 13:23进行了最后一次更新&emsp;
