--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -38,28 +38,37 @@
   </p>
 
   <h3 class="pageSubTitle">属性</h3>
-  <p class="pageText">插件清单文件支持以下属性：</p>
+  <p class="pageText">插件清单文件支持以下属性：<br><br></p>
 
   <h4 class="pageText" style="font-weight: bold">Author</h4>
-  <p class="pageText">类型：字符串<br>本插件的作者。</p>
+  <p class="pageText">类型：字符串<br>本插件的作者。<br></p>
 
   <h4 class="pageText" style="font-weight: bold">Category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
+  <p class="noteTitle">最低版本要求：1.11.72</p>
+  <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。<br></p>
 
   <h4 class="pageText" style="font-weight: bold">id</h4>
-  <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。</p>
+  <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。<br></p>
 
   <h4 class="pageText" style="font-weight: bold">min version</h4>
-  <p class="pageText">类型：整数<br>插件可以使用的最小版本。</p>
+  <p class="pageText">类型：整数<br>插件可以使用的最小版本。<br></p>
 
   <h4 class="pageText" style="font-weight: bold">multiplayer</h4>
   <p class="pageText">类型：布尔值<br>控制插件能否在在线模式使用。</p>
   <p class="noteTitle">最低版本要求：1.8.33</p>
-  <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。</p>
-  
+  <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。<br></p>
+
+  <h4 class="pageText" style="font-weight: bold">once</h4>
+  <p class="pageText">类型：布尔值<br>控制插件清单是否应加载一次。<br>
+    如果启用，当出现具有相同ID的另一个插件清单文件时，游戏将忽略它，不会报错。<br>
+  </p>
+
+  <h4 class="pageText" style="font-weight: bold">permanent</h4>
+  <p class="pageText">类型：布尔值<br>控制插件是否算作外部（本地）插件<br></p>  
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 13:23进行了最后一次更新&emsp;
+    本页于2024/11/30 13:56进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
