--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -38,15 +38,15 @@
   </p>
 
   <h3 class="pageSubTitle">属性</h3>
-  <p class="pageText">插件清单文件支持以下属性：<br><br></p>
+  <p class="pageText">插件清单文件支持以下属性：<br></p>
 
-  <h4 class="pageText" style="font-weight: bold">Author</h4>
-  <p class="pageText">类型：字符串<br>本插件的作者。<br></p>
+  <h4 class="pageText" style="font-weight: bold"><br>Author</h4>
+  <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
-  <h4 class="pageText" style="font-weight: bold">Category</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>Category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
   <p class="noteTitle">最低版本要求：1.11.72</p>
-  <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。<br></p>
+  <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。</p>
 
   <h4 class="pageText" style="font-weight: bold">id</h4>
   <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。<br></p>
