--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -24,7 +24,7 @@
   <p class="pageText">
     在1.8.15版本中，西奥小镇加入了插件清单文件（即plugin.manifest），这让外部插件也能在在线模式中使用。<br>
     此文件必须在插件文件夹的根目录（即第一个文件夹）中才能有效，且文件名必须为 <text class="mono">plugin.manifest</text>。<br>
-    如果你想创建新加入的 <text class="mono">.ttplugin</text> 文件的话，插件清单文件也是必须要有的。
+    如果你想创建新加入的 <text class="mono">.ttplugin</text> 文件的话，插件清单文件也是必须要有的。<br>
     插件清单文件还有一个比较重要的作用就是使你的插件能够在外部（本地）插件列表中能够显示。
   </p>
 
@@ -40,35 +40,35 @@
   <h3 class="pageSubTitle">属性</h3>
   <p class="pageText">插件清单文件支持以下属性：<br></p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>Author</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;Author</h4>
   <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>Category</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;Category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
   <p class="noteTitle">最低版本要求：1.11.72</p>
   <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold">id</h4>
-  <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。<br></p>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;id</h4>
+  <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。</p>
 
-  <h4 class="pageText" style="font-weight: bold">min version</h4>
-  <p class="pageText">类型：整数<br>插件可以使用的最小版本。<br></p>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;min version</h4>
+  <p class="pageText">类型：整数<br>插件可以使用的最小版本。</p>
 
-  <h4 class="pageText" style="font-weight: bold">multiplayer</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;multiplayer</h4>
   <p class="pageText">类型：布尔值<br>控制插件能否在在线模式使用。</p>
   <p class="noteTitle">最低版本要求：1.8.33</p>
-  <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。<br></p>
+  <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold">once</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;once</h4>
   <p class="pageText">类型：布尔值<br>控制插件清单是否应加载一次。<br>
-    如果启用，当出现具有相同ID的另一个插件清单文件时，游戏将忽略它，不会报错。<br>
+    如果启用，当出现具有相同ID的另一个插件清单文件时，游戏将忽略它，不会报错。
   </p>
 
-  <h4 class="pageText" style="font-weight: bold">permanent</h4>
-  <p class="pageText">类型：布尔值<br>控制插件是否算作外部（本地）插件<br></p>  
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;permanent</h4>
+  <p class="pageText">类型：布尔值<br>控制插件是否算作外部（本地）插件</p>  
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 13:56进行了最后一次更新&emsp;
+    本页于2024/11/30 14:01进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
