--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -40,10 +40,10 @@
   <h3 class="pageSubTitle">属性</h3>
   <p class="pageText">插件清单文件支持以下属性：<br></p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;Author</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;author</h4>
   <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;Category</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
   <p class="noteTitle">最低版本要求：1.11.72</p>
   <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。</p>
