--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -40,31 +40,31 @@
   <h3 class="pageSubTitle">属性</h3>
   <p class="pageText">插件清单文件支持以下属性：<br></p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;author</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>author</h4>
   <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;category</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
   <p class="noteTitle">最低版本要求：1.11.72</p>
   <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;id</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>id</h4>
   <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;min version</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>min version</h4>
   <p class="pageText">类型：整数<br>插件可以使用的最小版本。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;multiplayer</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>multiplayer</h4>
   <p class="pageText">类型：布尔值<br>控制插件能否在在线模式使用。</p>
   <p class="noteTitle">最低版本要求：1.8.33</p>
   <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;once</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>once</h4>
   <p class="pageText">类型：布尔值<br>控制插件清单是否应加载一次。<br>
     如果启用，当出现具有相同ID的另一个插件清单文件时，游戏将忽略它，不会报错。
   </p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>&emsp;&emsp;permanent</h4>
+  <h4 class="pageText" style="font-weight: bold"><br>permanent</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否算作外部（本地）插件</p>  
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
