--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -82,7 +82,7 @@
   <p class="pageText">类型：字符串<br>插件的描述。</p> 
   
   <h4 class="pageText" style="font-weight: bold"><br>thumbnail</h4>
-  <p class="pageText">类型：字符串<br>插件的预览图。</p> 
+  <p class="pageText">类型：字符串<br>插件的预览图的路径。</p> 
   
   <h4 class="pageText" style="font-weight: bold"><br>title</h4>
   <p class="pageText">类型：字符串<br>插件的标题。/p> 
