--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -85,7 +85,7 @@
   <p class="pageText">类型：字符串<br>插件的预览图的路径。</p> 
   
   <h4 class="pageText" style="font-weight: bold"><br>title</h4>
-  <p class="pageText">类型：字符串<br>插件的标题。/p> 
+  <p class="pageText">类型：字符串<br>插件的标题。</p> 
 
   <h4 class="pageText" style="font-weight: bold"><br>url</h4>
   <p class="pageText">类型：字符串/布尔值false<br>可以下载到插件的链接，填写false则为不提供。</p> 
