--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -93,11 +93,11 @@
   <p class="note">此内容（url）需要最低1.8.16的游戏版本才能使用。</p>
 
   <h4 class="pageText" style="font-weight: bold"><br>version</h4>
-  <p class="pageText">类型：整数<br>插件的版本</p> 
+  <p class="pageText">类型：整数<br>插件的版本。</p> 
   
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 14:22进行了最后一次更新&emsp;
+    本页于2024/11/30 14:25进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
