--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -40,7 +40,7 @@
   <h3 class="pageSubTitle">属性</h3>
   <p class="pageText">插件清单文件支持以下属性：<br></p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>author</h4>
+  <h4 class="pageTitle3"><br>author</h4>
   <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
   <h4 class="pageText" style="font-weight: bold"><br>category</h4>
