--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -31,10 +31,8 @@
   <h3 class="pageSubTitle">例子</h3>
   <p class="pageText">以下是一个最简单、最基础的插件清单文件的例子：<br></p>
   <p class="codeTitle">plugin.manifest</p>
-  <p class="code">
-    {<br>  "id": "$example",<br>  "version": 1,<br>
-      "title": "标题",<br>  "text": "介绍",<br>  "author": "Sioneo",
-    <br>  "thumbnail": "preview.png"<br>}
+  <p class="code"><p>{<br>  "id": "$example",<br>  "version": 1,<br>  "title": "标题",<br>  "text": "介绍",</p>
+    <p>  "author": "Sioneo",<br>  "thumbnail": "preview.png"<br>}</p>
   </p>
 
   <h3 class="pageSubTitle">属性</h3>
@@ -73,8 +71,7 @@
     在内部，可运行的平台由libgdx提供的<text class="mono">ApplicationType</text>枚举决定。<br>
     每个平台的值：<text class="mono">android</text>、<text class="mono">ios</text>、<text class="mono">desktop</text><br>
     <p class="codeTitle">例子：在这个例子中，我们限制插件只能在安卓和桌面端上使用。</p>
-    <p class="code">{<br>  "id": "$example",<br>  "title": "标题",
-      <br>  "platforms": ["android", "desktop"]<br>}
+    <p class="code">{<br>  "id": "$example",<br>  "title": "标题",<br>  "platforms": ["android", "desktop"]<br>}
     </p>
   </p> 
   
