--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -31,8 +31,7 @@
   <h3 class="pageSubTitle">例子</h3>
   <p class="pageText">以下是一个最简单、最基础的插件清单文件的例子：<br></p>
   <p class="codeTitle">plugin.manifest</p>
-  <p class="code"><p>{<br>  "id": "$example",<br>  "version": 1,<br>  "title": "标题",<br>  "text": "介绍",</p>
-    <p>  "author": "Sioneo",<br>  "thumbnail": "preview.png"<br>}</p>
+  <p class="code">{<br>  "id": "$example",<br>  "version": 1,<br>  "title": "标题",<br>  "text": "介绍",<br>  "author": "Sioneo",<br>  "thumbnail": "preview.png"<br>}</p>
   </p>
 
   <h3 class="pageSubTitle">属性</h3>
