--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -15,9 +15,9 @@
   <p class="webIndex">
     相关页面：
     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
-    <a href="https://pca.svetikas.lt/docs/manifest/" target="_blank" rel="noopener noreferrer">官方插件系统的相关内容</a>
+    <a href="https://pca.svetikas.lt/docs/manifest/" target="_blank" rel="noopener noreferrer">官方插件系统原文</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
-
+    <a href="https://sioneo.github.io/ttpsc/website/guide/BasicJson.html" target="_self">JSON基础内容</a>
   </p>
 
   <h2 class="pageTitle">插件清单文件（plugin.manifest）</h2>
@@ -31,7 +31,8 @@
   <h3 class="pageSubTitle">例子</h3>
   <p class="pageText">以下是一个最简单、最基础的插件清单文件的例子：<br></p>
   <p class="codeTitle">plugin.manifest</p>
-  <p class="code">{<br>  "id": "$example",<br>  "version": 1,<br>  "title": "标题",<br>  "text": "介绍",<br>  "author": "Sioneo",<br>  "thumbnail": "preview.png"<br>}</p>
+  <p class="code">{<br>  "id": "$example",<br>  "version": 1,<br>  "title": "标题",
+  "text": "介绍",<br>  "author": "Sioneo",<br>  "thumbnail": "preview.png"<br>}</p>
   </p>
 
   <h3 class="pageSubTitle">属性</h3>
@@ -70,8 +71,7 @@
     在内部，可运行的平台由libgdx提供的<text class="mono">ApplicationType</text>枚举决定。<br>
     每个平台的值：<text class="mono">android</text>、<text class="mono">ios</text>、<text class="mono">desktop</text><br>
     <p class="codeTitle">例子：在这个例子中，我们限制插件只能在安卓和桌面端上使用。</p>
-    <p class="code">{<br>  "id": "$example",<br>  "title": "标题",<br>  "platforms": ["android", "desktop"]<br>}
-    </p>
+    <p class="code">{<br>  "id": "$example",<br>  "title": "标题",<br>  "platforms": ["android", "desktop"]<br>}</p>
   </p> 
   
   <h4 class="pageText" style="font-weight: bold"><br>text</h4>
@@ -93,7 +93,7 @@
   
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 14:33进行了最后一次更新&emsp;
+    本页于2024/11/30 16:43进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
