--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -41,31 +41,31 @@
   <h4 class="pageTitle3"><br>author</h4>
   <p class="pageText">类型：字符串<br>本插件的作者。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>category</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>category</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否应该出现在外部（本地）插件列表中。</p>
   <p class="noteTitle">最低版本要求：1.11.72</p>
   <p class="note">此内容（category）需要最低1.11.72的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>id</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>id</h4>
   <p class="pageText">类型：字符串<br>用于识别插件，所有id都应该是独一无二的。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>min version</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>min version</h4>
   <p class="pageText">类型：整数<br>插件可以使用的最小版本。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>multiplayer</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>multiplayer</h4>
   <p class="pageText">类型：布尔值<br>控制插件能否在在线模式使用。</p>
   <p class="noteTitle">最低版本要求：1.8.33</p>
   <p class="note">此内容（multiplayer）需要最低1.8.33的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>once</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>once</h4>
   <p class="pageText">类型：布尔值<br>控制插件清单是否应加载一次。<br>
     如果启用，当出现具有相同ID的另一个插件清单文件时，游戏将忽略它，不会报错。
   </p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>permanent</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>permanent</h4>
   <p class="pageText">类型：布尔值<br>控制插件是否算作外部（本地）插件。</p> 
 
-  <h4 class="pageText" style="font-weight: bold"><br>platforms</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>platforms</h4>
   <p class="pageText">类型：字符串、数组<br>
     控制插件可运行的平台。一般来说，这只应用于Lua或着色器插件，因为常规的插件应与每个平台兼容。<br>
     在内部，可运行的平台由libgdx提供的<text class="mono">ApplicationType</text>枚举决定。<br>
@@ -74,21 +74,21 @@
     <p class="code">{<br>  "id": "$example",<br>  "title": "标题",<br>  "platforms": ["android", "desktop"]<br>}</p>
   </p> 
   
-  <h4 class="pageText" style="font-weight: bold"><br>text</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>text</h4>
   <p class="pageText">类型：字符串<br>插件的描述。</p> 
   
-  <h4 class="pageText" style="font-weight: bold"><br>thumbnail</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>thumbnail</h4>
   <p class="pageText">类型：字符串<br>插件的预览图的路径。</p> 
   
-  <h4 class="pageText" style="font-weight: bold"><br>title</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>title</h4>
   <p class="pageText">类型：字符串<br>插件的标题。</p> 
 
-  <h4 class="pageText" style="font-weight: bold"><br>url</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>url</h4>
   <p class="pageText">类型：字符串/布尔值false<br>可以下载到插件的链接，填写false则为不提供。</p> 
   <p class="noteTitle">最低版本要求：1.8.16</p>
   <p class="note">此内容（url）需要最低1.8.16的游戏版本才能使用。</p>
 
-  <h4 class="pageText" style="font-weight: bold"><br>version</h4>
+  <h4 class="pageTitle3" style="font-weight: bold"><br>version</h4>
   <p class="pageText">类型：整数<br>插件的版本。</p> 
   
 
