--- a/website/compass.html
+++ b/website/compass.html
@@ -28,9 +28,9 @@
 
   <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/introduction.html" target="_self">简介</a></h3>
   <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/PluginManifest.html" target="_self">插件清单文件(plugin.manifest)</a></h3>
-  <h3 class="pageIndexLink"><a href="tutorial/compass.html" target="_self">教程</a></h3>
-  <h3 class="pageIndexLink"><a href="resource/compass.html" target="_self">资源</a></h3>
-  <h3 class="pageIndexLink"><a href="other/compass.html" target="_self">其它</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/compass.html" target="_self">教程</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/resource/compass.html" target="_self">资源</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/other/compass.html" target="_self">其它</a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     本页于2024/11/30 13:06进行最后一次更新&emsp;
