--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>资源 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="/style/style.css">
+  <link rel="stylesheet" type="text/css" href="/main/style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
@@ -30,7 +30,7 @@
   <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/SimplePlugin.html" target="_self">从0开始做一个简单的插件(plugin.manifest)</a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 18:01进行最后一次更新&emsp;
+    本页于2024/11/30 18:05进行最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
