--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>资源 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="/main/style/style.css">
+  <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
@@ -11,17 +11,6 @@
   <h3 class="pageNow">
      <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>  
   资源</h3>
-
-  <p class="webIndex">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
-    <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
-    <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
-    <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
-    <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">GAMEKEE</a>
-    <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">QQ频道</a>
-    <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
-    <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
-  </p>
 
   <h2 class="pageTitle">教程</h2>
   <p class="pageText">你可以在此进入各教程的页面。<br><br></p>
