--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -15,8 +15,12 @@
   <h2 class="pageTitle">教程</h2>
   <p class="pageText">你可以在此进入各教程的页面。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/BasicJson.html" target="_self">JSON基础内容</a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/SimplePlugin.html" target="_self">从0开始做一个简单的插件(plugin.manifest)</a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/BasicJson.html" target="_self">
+    JSON基础内容
+  </a></h3>
+  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/SimplePlugin.html" target="_self">
+    从0开始做一个简单的插件
+  </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     本页于2024/11/30 18:05进行最后一次更新&emsp;
