--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>资源 - 西奥小镇插件系统中文站</title>
+  <title>教程 - 西奥小镇插件系统中文站</title>
   <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
 </head>
 <body>
