--- a/website/other/compass.html
+++ b/website/other/compass.html
@@ -14,7 +14,10 @@
 
   <h2 class="pageTitle">其它</h2>
   <p class="pageText">你可以在此进入一些其它内容的页面。<br><br></p>
-  <p class="pageText">暂无内容。</p>
+  <p class="pageText">暂无内容。
+    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">
+    返回索引页</a>
+  </p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
     本页于2024/11/30 19:43进行最后一次更新&emsp;
