--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -31,11 +31,12 @@
     布尔值（即true和false）：直接输入即可（例："active": true）<br>
     字符串（即非纯数字、非布尔值）：需用单/双引号括起（例："id": "$example"）
   </p>
-  <p>西奥小镇的JSON解析器还会在遇到不支持的属性（键）时会将其忽略。</p>
+  <p class="pageText">西奥小镇的JSON解析器还会在遇到不支持的属性（键）时会将其忽略。</p>
 
   <h3 class="pageSubTitle">基础JSON类型</h3>
+  <p class="pageText">以下包含了一些基础的JSON类型：</p>
 
-  <h4 class="pageTitle3"><br>布尔值（Boolean）</h4>
+  <h4 class="pageTitle3">布尔值（Boolean）</h4>
   <p class="pageText">布尔值只有两个值：真（<text class="mono">true</text>）或假（<text class="mono">false</text>），你可以简单地把她们理解为启用/停用。</p>
   <p class="codeTitle">例子</p>
   <p class="code">{<br>  "active": true, // 设置启用某一内容。<br>  "draw ground": false // 设置此建筑不绘制地面。<br>}</p>
@@ -68,7 +69,7 @@
   <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown, "zh": "西奥小镇"}<br>}</p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 20:51进行了最后一次更新&emsp;
+    本页于2024/11/30 20:53进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
