--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -20,7 +20,7 @@
 
   <h2 class="pageTitle">基础JSON内容</h2>
   <p class="pageText">
-    本页包括了<a href="https://www.json.org/json-zh.html" target="_blank" rel="noopener noreferrer">JSON规范</a>的一些内容。<br>
+    本页包括了<a class="link" href="https://www.json.org/json-zh.html" target="_blank" rel="noopener noreferrer">JSON规范</a>的一些内容。<br>
   </p>
   <p class="attentionTitle">注意！</p>
   <p class="attention">西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的「true」视为布尔值）
