--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -23,10 +23,10 @@
     本页包括了<a class="link" href="https://www.json.org/json-zh.html" target="_blank" rel="noopener noreferrer">JSON规范</a>的一些内容。<br>
   </p>
   <p class="attentionTitle">注意！</p>
-  <p class="attention">西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的「true」视为布尔值）
+  <p class="attention">&emsp;&emsp;西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的「true」视为布尔值）
     但是，在某些情况下，由于属性接受不同类型的值，这可能会造成歧义。
-    因此，建议不要依赖西奥小镇的JSON解析器始终将字符串类型值视为其他类型，正确输入每一个值。<br>
-    每一种数据类型的正确输入方式：<br>
+    因此，建议不要依赖西奥小镇的JSON解析器始终将字符串类型值视为其他类型，正确输入每一个值。<br><br>
+    &emsp;&emsp;每一种数据类型的正确输入方式：<br>
     整数/浮点数（即为数字）：直接输入即可（例："level": 1）<br>
     布尔值（即true和false）：直接输入即可（例："active": true）<br>
     字符串（即非纯数字、非布尔值）：需用单/双引号括起（例："id": "$example"）
