--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -27,9 +27,9 @@
     但是，在某些情况下，由于属性接受不同类型的值，这可能会造成歧义。
     因此，建议不要依赖西奥小镇的JSON解析器始终将字符串类型值视为其他类型，正确输入每一个值。<br><br>
     每一种数据类型的正确输入方式：<br>
-    &nbsp;&nbsp;整数/浮点数（即为数字）：直接输入即可（例："level": 1）<br>
-    &nbsp;&nbsp;布尔值（即true和false）：直接输入即可（例："active": true）<br>
-    &nbsp;&nbsp;字符串（即非纯数字、非布尔值）：需用单/双引号括起（例："id": "$example"）
+    &nbsp;&nbsp;整数/浮点数（即为数字）：直接输入即可（例：<text class="mono">"level": 1</text>）<br>
+    &nbsp;&nbsp;布尔值（即<text class="mono">true</text>和<text class="mono">false</text>）：直接输入即可（例：<text class="mono">"active": true</text>）<br>
+    &nbsp;&nbsp;字符串（即文本，非纯数字、非布尔值）：需用单/双引号括起（例：<text class="mono">"id": "$example"</text>）
   </p>
   <p class="pageText">西奥小镇的JSON解析器还会在遇到不支持的属性（键）时会将其忽略。</p>
 
@@ -69,7 +69,7 @@
   <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown, "zh": "西奥小镇"}<br>}</p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 20:53进行了最后一次更新&emsp;
+    本页于2024/11/30 20:58进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
