--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -23,7 +23,7 @@
     本页包括了<a class="link" href="https://www.json.org/json-zh.html" target="_blank" rel="noopener noreferrer">JSON规范</a>的一些内容。<br>
   </p>
   <p class="attentionTitle">注意！</p>
-  <p class="attention">&nbsp;&nbsp;西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的「true」视为布尔值）
+  <p class="attention">&nbsp;&nbsp;西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的<text class="mono">"true"</text>视为布尔值）
     但是，在某些情况下，由于属性接受不同类型的值，这可能会造成歧义。
     因此，建议不要依赖西奥小镇的JSON解析器始终将字符串类型值视为其他类型，正确输入每一个值。<br><br>
     每一种数据类型的正确输入方式：<br>
