--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -25,7 +25,7 @@
   <p class="attentionTitle">注意！</p>
   <p class="attention">&nbsp;&nbsp;西奥小镇的JSON解析器具有纠错能力，因此她可以将以字符串格式提供的值视为其他类型（例如将字符串格式的<text class="mono">"true"</text>视为布尔值）
     但是，在某些情况下，由于属性接受不同类型的值，这可能会造成歧义。
-    因此，建议不要依赖西奥小镇的JSON解析器始终将字符串类型值视为其他类型，正确输入每一个值。<br><br>
+    因此，建议不要依赖西奥小镇的JSON解析器将字符串类型值转化为其他类型，应正确输入每一个值。<br><br>
     每一种数据类型的正确输入方式：<br>
     &nbsp;&nbsp;整数/浮点数（即为数字）：直接输入即可（例：<text class="mono">"level": 1</text>）<br>
     &nbsp;&nbsp;布尔值（即<text class="mono">true</text>和<text class="mono">false</text>）：直接输入即可（例：<text class="mono">"active": true</text>）<br>
