--- a/website/submit.html
+++ b/website/submit.html
@@ -42,6 +42,8 @@
     </a>
   </p>
   <p class="pageText">向我发送电子邮件: ttpscwebsite@outlook.com</p>
+  <p class="pageText">在Github上发送Pull request: <a class="link" href="https://github.com/Sioneo/ttpsc" target="_blank">点击此处
+  </a></p>
 
 
   <h3 class="pageSubTitle">投稿格式</h3>
@@ -49,7 +51,7 @@
 
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 17:06进行了最后一次更新&emsp;
+    本页于2024/11/30 22:36进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 </body>
