--- a/website/submit.html
+++ b/website/submit.html
@@ -9,19 +9,18 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>
-    <a href="https://sioneo.github.io/ttpsc/" target="_self" class="backButton">返回主页</a>
+    <a href="../compass.html" target="_self" class="backButton">返回索引页</a>
+    <a href="../../index.html" target="_self" class="backButton">返回主页</a>
   投稿</h3>
 
   <p class="webIndex">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="../compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
     <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">GAMEKEE</a>
     <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">QQ频道</a>
-    <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
-    <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
+    <a href="../submit.html" target="_self">向我们投稿!</a>
   </p>
 
   <h2 class="pageTitle">向我们投稿！</h2>
@@ -51,8 +50,8 @@
 
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 22:36进行了最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    本页于2024/21/01 00:05进行了最后一次更新&emsp;
+    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
 </body>
 </html>
