--- a/website/submit.html
+++ b/website/submit.html
@@ -9,12 +9,12 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-    <a href="../website/compass.html" target="_self" class="backButton">返回索引页</a>
+    <a href="compass.html" target="_self" class="backButton">返回索引页</a>
     <a href="../index.html" target="_self" class="backButton">返回主页</a>
   投稿</h3>
 
   <p class="webIndex">
-    <a href="../website/compass.html" target="_self">索引页</a>
+    <a href="compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
@@ -50,7 +50,7 @@
 
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/21/01 00:07进行了最后一次更新&emsp;
+    本页于2024/12/01 00:09进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
 </body>
